--- a/neovim/.config/nvim/coc-settings.json
+++ b/neovim/.config/nvim/coc-settings.json
@@ -1,5 +1,5 @@
 {
-    "coc.preferences.formatOnSaveFiletypes": ["javascript", "json", "Markdown"],
+    "coc.preferences.formatOnSaveFiletypes": ["json", "Markdown"],
     "eslint.filetypes": ["javascript", "typescript", "typescriptreact", "javascriptreact"],
     "diagnostic.errorSign": "•",
     "diagnostic.warningSign": "•",
