--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,7 +28,8 @@ set -g status-justify centre
 # Set default bg/fg settings for status bar
 # set-option -g status-style bright,bg='#1B2B34',fg=default
 # set-option -g status-style bright,bg='#00008B',fg=default
-set-option -g status-style bright,bg='#202020',fg=default
+# set-option -g status-style bright,bg='#202020',fg=default
+set-option -g status-style bright,bg='#2e3436',fg=default
 
 set-window-option -g window-status-current-format ''
 set-window-option -g window-status-current-format ''
