change default git branch/zsh prompt

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -22,3 +22,6 @@
     lg      = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
     lp      = log --pretty=oneline
     last    = log -1 HEAD
+
+[init]
+    defaultBranch = main
