add kitty.conf syntax highlighting/kitty changes

--- a/nvim/.config/kitty/kitty.conf
+++ b/nvim/.config/kitty/kitty.conf
@@ -6,9 +6,13 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      Monoid
-font_family      Menlo
+font_family      Monoid
+# font_family      JetBrains Mono Light
+# font_family      Menlo
+# font_family      Hera
+# font_family      Lilex
 # font_family      Consolas ligaturized v2
+# font_family      Spleen 16x32
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -26,7 +30,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 15.0
+font_size 12.0
 
 #: Font size (in pts)
 
@@ -49,8 +53,9 @@ font_size 15.0
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  0
-adjust_column_width 95%
+# adjust_line_height  0
+# adjust_column_width 95%
+# adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
@@ -59,7 +64,7 @@ adjust_column_width 95%
 #: than 100% to reduce sizes (but this might cause rendering
 #: artifacts).
 
-adjust_baseline -5
+# adjust_baseline -5
 
 #: Adjust the vertical alignment of text (the height in the cell at
 #: which text is positioned). You can use either numbers, which are
@@ -665,7 +670,7 @@ cursor_blink_interval 0
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-# window_padding_width 0
+window_padding_width 6.0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -781,7 +786,16 @@ cursor_blink_interval 0
 
 #: Tab bar {{{
 
+active_tab_title_template {index}: {title}
+active_tab_foreground   #000
+active_tab_background   #FFF
+inactive_tab_foreground #444
+inactive_tab_background #999
+inactive_tab_font_style normal
+
+
 # tab_bar_edge bottom
+tab_bar_edge top
 
 #: Which edge to show the tab bar on, top or bottom
 
@@ -1248,7 +1262,7 @@ background #23282A
 #: means to use the background color of the currently active window
 #: and finally you can use an arbitrary color, such as #12af59 or red.
 
-# macos_titlebar_color system
+macos_titlebar_color system
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, light or dark can
@@ -1563,6 +1577,26 @@ background #23282A
 #: }}}
 
 #: Window management {{{
+
+# map super+n
+# map super+w
+# map ctrl+shift+]
+# map ctrl+shift+[
+# map ctrl+shift+f
+# map ctrl+shift+b
+# map ctrl+shift+`
+# map ctrl+shift+1
+# map ctrl+shift+2
+# map ctrl+shift+3
+# map ctrl+shift+4
+# map ctrl+shift+5
+# map ctrl+shift+6
+# map ctrl+shift+7
+# map ctrl+shift+8
+# map ctrl+shift+9
+# map ctrl+shift+0
+# map kitty_mod+enter
+
 
 #: New window
 
